--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body class="bg-white text-dark ">
   <header class="bg-secondary text-center p-3 mb-5">
-    <h1>ファティン　アミラ　の　ページ
+    <h1>上原海斗　の　ページ
     </h1>
   </header>
   <div class="container text-center">
