--- a/index.html
+++ b/index.html
@@ -1,86 +1,216 @@
 <!DOCTYPE html>
-<html lang="en">
+<!--
+	Indus by TEMPLATE STOCK
+	templatestock.co @templatestock
+	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
+-->
 
- 
-<head>
+<html lang="en" class="no-js">
+	<head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1"> 
+        <title>Indus HTML5 Free Responsive Template | Template stock</title>
 
+        <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
+        <link rel="stylesheet" type="text/css" href="css/et-lineicon.css" />
+        <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
+        <link rel="stylesheet" type="text/css" href="css/style.css" />
+        <link href='http://fonts.googleapis.com/css?family=Roboto:400,500,400italic,500italic,700' rel='stylesheet' type='text/css'>
+        <!--[if IE]>
+        	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+        <![endif]-->
+	</head>
+	<body>
 
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>BIT TG</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-    crossorigin="anonymous">
-</head>
-
-<body class="bg-white text-dark ">
-  <header class="bg-secondary text-center p-3 mb-5">
-    <h1>上原海斗　の　ページ
-    </h1>
-  </header>
-  <div class="container text-center">
-
-    <!-- Word & Input -->
-    <div class="row">
-      <div class="col-md-6 mx-auto">
-        <p class="lead">学校で作って来たゲームの数々をこのページにて
-          <p class="lead">紹介させていただきます
-
-          <!-- コメントはこうやって書くんだ　-->
-
-         よろしくお願いします！</p>
-        <h2 class="display-2 mb-5" id="current-word">一つ目のゲームタイトル</h2>
-		
-		<!-- 動画を入れる　-->
-		
-		<video width="320" height="240" controls>
-  
-<source src="test.mp4" type="video/mp4">
-
-Your browser does not support the video tag.
-</video>
-
-        <!-- Time & Score Columns -->
-        <div class="row mt-5">
-          <div class="col-md-6">
-            <h3>残り時間:
-              <span id="time">0</span>
-            </h3>
-          </div>
-          <div class="col-md-6">
-            <h3>スコア:
-              <span id="score">0</span>
-            </h3>
-          </div>
-          <br><br>
-          <div class="col">
-            <h3>ハイスコア:
-              <span id="highscore">0</span>
-            </h3>
-          </div>
-        </div>
-
-        <!-- Instructions -->
-        <div class="row mt-5">
-          <div class="col-md-12">
-            <div class="card card-body bg-secondary text-white">
-              <h5>やり方</h5>
-              <p>ゲームを始めるには「startGame」を入力してください。</p>
-              <p>画面に出ている言葉を入力できたらスコアをもらいます。</p>
-              <p>もう一回遊ぶ場合は「startGame」を記入すればリセットされます。</p>
+        <!-- Preloader -->
+        <div class="animationload">
+            <div class="loader">
+                Loading...
             </div>
+        </div> 
+        <!-- End Preloader -->
 
-           
-          </div>
-        </div>
+        <!-- =========================
+                 HOME
+        ========================== -->
 
-      </div>
-    </div>
-    <label>名前:</label><input type="text" id= "username" > <button id = "btn"> スコア送信 </button>
+		<section id="home">
+			<div class="content">
+                <div id="large-header" class="large-header">
+                    <canvas id="demo-canvas"></canvas>
+                    <div id="countdown_dashboard" class="home-main container">
+                        <div class="row">
+                            <div class="logo">
+                                <img src="images/logo.png" alt="logo">
+                                <p>Lorem Ipsum is simply dummy text</p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <!-- DAYS -->
+                            <div class="col-md-3 col-sm-3 col-xs-6 dash-glob" data-scroll-reveal="enter bottom move 25px, after 0.3s">
+                                <div class="dash days_dash">
+                                    <div class="digit">0</div>
+                                    <div class="digit">0</div>
+                                    <span class="dash_title">Days</span>
+                                </div>
+                            </div>
+                            <!-- HOURS -->
+                            <div class="col-md-3 col-sm-3 col-xs-6 dash-glob" data-scroll-reveal="enter bottom move 25px, after 0.3s">
+                                <div class="dash hours_dash">
+                                    <div class="digit">0</div>
+                                    <div class="digit">0</div>
+                                    <span class="dash_title">Hours</span>
+                                </div>
+                            </div>
+                            <!-- MINUTES -->
+                            <div class="col-md-3 col-sm-3 col-xs-6 dash-glob" data-scroll-reveal="enter bottom move 25px, after 0.3s">
+                                <div class="dash minutes_dash">
+                                    <div class="digit">0</div>
+                                    <div class="digit">0</div>
+                                    <span class="dash_title">Minutes</span>
+                                </div>
+                            </div>
+                            <!-- SECONDS -->
+                            <div class="col-md-3 col-sm-3 col-xs-6 dash-glob" data-scroll-reveal="enter bottom move 25px, after 0.3s">
+                                <div class="dash seconds_dash">
+                                    <div class="digit">0</div>
+                                    <div class="digit">0</div>
+                                    <span class="dash_title">Seconds</span>
+                                </div>
+                            </div>
+                        </div> <!-- END ROW -->
+                    </div> <!-- END COUNTDOWN -->
+                </div> <!-- LARGE HEADER -->
+            </div> <!-- END CONTENT -->
+        </section>
 
-  </div>
+        <!-- =========================
+                 NEWSLETTER
+        ========================== -->
 
-<script src="type.js"> </script>	
-</body>
+        <section class="newsletter">
+            <div class="container">
+                <div class="row text-center">
+                    <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
+                        <div class="main_content">
+                            <h4><strong>Indus is under construction!</strong></h4>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
+                            <div id="" class="confirm-message"></div>
+                            <form id="" name="">
+                                <div class="input-group">
+                                    <input class="form-control news-input" type="text" name="subscribe_email" id="subscribe_email" placeholder="Email" />
+                                    <span class="input-group-btn">
+                                        <button class="btn btn-custom news-btn" id="" name="subscribe_btn"><span>Subscribe</span></button>
+                                    </span>
+                                </div><!-- /input-group -->
+                            </form><!-- END FORM -->
+                        </div>  
+                    </div>
+                </div>
+            </div>
+        </section>
 
+        <!-- =========================
+                 FEATURES
+        ========================== -->
+
+        <section class="features parallax" data-stellar-background-ratio="0.7" id="features">
+            <div class="container">
+                <div class="row text-center">
+                    <div class="col-lg-4 col-md-4">
+                        <div class="features-box">
+                            <div class="open-overlay"><i class="icon-lightbulb"></i></div>
+                            <h4>High Quality</h4>
+                            <p>Nullam posuere, libero dolor molestie mi, vitae rutrum odio urna non dui.Nullam posuere, libero dolor molestieabd mi, vitae.</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-4">
+                        <div class="features-box">
+                            <div class="open-overlay"><i class="icon-ribbon"></i></div>
+                            <h4>Great Features</h4>
+                            <p>Nullam posuere, libero dolor molestie mi, vitae rutrum odio urna non dui.Nullam posuere, libero dolor molestieabd mi, vitae.</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-4">
+                        <div class="features-box">
+                            <div class="open-overlay"><i class="icon-circle-compass"></i></div>
+                            <h4>Customer Services</h4>
+                            <p>Nullam posuere, libero dolor molestie mi, vitae rutrum odio urna non dui.Nullam posuere, libero dolor molestieabd mi, vitae.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>    
+
+        <!-- =========================
+                 CONTACT
+        ========================== -->
+
+        <section id="contact" class="contact">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12 col-md-12">
+                        <h4>Get In Touch</h4>
+                        <div class="line-separate line-white text-center"><span></span></div>
+                        <p>7-Indus House, Area name,city name -1230009</p>
+                    </div> <!-- end Our Location -->
+                </div> <!-- end row -->
+                <!-- CONTACT FORM -->
+                <div id="cformSuccessMsg" style="display: none;" class="confirm-message"></div>
+                <form id="" name="contactForm" method="POST" >
+                    <div class="row">
+                        <div class="col-lg-4 col-md-4 col-lg-offset-2 col-md-offset-2">
+                            <input class="" type="text" name="contact_name" id="contact_name" placeholder="Name" />
+                        </div> <!-- end Name -->
+                        <div class="col-lg-4 col-md-4">
+                            <input class="" type="text" name="contact_email" id="contact_email" placeholder="Email" />
+                        </div> <!-- end Email -->
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-8 col-md-8 col-lg-offet-2 col-md-offset-2">
+                            <textarea name="contact_message" id="contact_message" placeholder="Message"></textarea>
+                        </div>
+                    </div> <!-- end Message -->
+                    <div class="row">
+                        <div class="col-md-8 col-md-offset-2">
+                            <div class="text-right">
+                                <button class="btn btn-custom" id="contact_submit_btn" name="contact_submit_btn"><span>Send Message</span></button>
+                            </div>
+                        </div>
+                    </div> <!-- end button -->
+                </form><!-- END FORM -->
+            </div> <!-- end container -->
+        </section> <!-- end Contact -->
+
+        <!-- =========================
+                 FOOTER
+        ========================== -->
+
+        <footer class="footer">
+            <div class="container text-center">
+                <div class="row">
+                    <div class="col-md-12">
+                        <ul class="social list-inline">
+                            <li class="social-btn" id="fb"><a href="#"><i class="fa fa-facebook"></i></a></li>
+                            <li class="social-btn" id="tw"><a href="#"><i class="fa fa-twitter"></i></a></li>
+                            <li class="social-btn" id="tbl"><a href="#"><i class="fa fa-tumblr"></i></a></li>
+                            <li class="social-btn" id="pin"><a href="#"><i class="fa  fa-pinterest"></i></a></li>
+                            <li class="social-btn" id="flk"><a href="#"><i class="fa  fa-flickr"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="row">
+                    <p class="copyright">Copyright© 2016 <a href="http://templatestock.co">Template Stock</p>
+                </div>
+            </div>
+        </footer>
+            
+        <!-- JAVASCRIPTS -->
+        <script src="js/jquery.min.js"></script>
+        <script src="js/jquery.lwtCountdown-1.0.js"></script>
+        <script src="js/jquery.stellar.min.js"></script>
+        <script src="js/jquery.nicescroll.min.js"></script>
+        <script src="js/animated.js"></script>
+        <script src="js/main.js"></script>
+	</body>
 </html>
